...
        android:ellipsize="end"
        android:singleLine="true"
        tools:text="Friends" />

    <!-- "kinnect" wordmark, shown instead of the title on Home. -->
    <TextView
        android:id="@+id/tv_wordmark"
        style="@style/Kinnect.Text.Wordmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/screen_margin"
...
