...
                android:background="@color/teal"
                android:visibility="invisible" />
        </FrameLayout>

        <!-- Menu -->
        <FrameLayout
            android:id="@+id/fl_tab_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/cd_tab_menu">

...
